--- a/project3-blackjack/styles.css
+++ b/project3-blackjack/styles.css
@@ -9,10 +9,10 @@
 
 body {
   margin-top: 0;
-  font-family: sans-serif;
+  font-family: "Gill Sans", sans-serif;
   margin-left: 30px;
   margin-right: 30px;
-  background-color: #e0e0e0;
+  background-color: #d1d1d1;
 }
 
 nav {
@@ -57,7 +57,7 @@ nav ul li a {
 }
 
 .container {
-  background-color: #ffffff;
+  background-color: #eed387;
   margin: 40px auto;
   max-width: 800px;
   padding: 38px 31px;
@@ -71,6 +71,7 @@ input {
   margin: 0 0 23px 0;
   padding: 0 9px;
   width: 100%;
+  border-radius: 3px;
 }
 
 button {
@@ -81,10 +82,11 @@ button {
 }
 
 .output-div {
-  background-color: lightgrey;
+  background-color: rgb(253, 253, 253);
   margin: 20px auto;
   padding: 20px;
   width: 100%;
+  border-radius: 3px;
 }
 
 hr {
@@ -150,7 +152,7 @@ hr {
 
 .button-group .button-group-button.active {
   border: 2px solid #333;
-  color: #fff;
+  color: white;
   background-color: #333;
   font-weight: bold;
 }
